# ahqai

.github/workflows/: client-apple.yml  client.yml  pages.yml  rust-clippy.yml  server.yml
client/: package.json  pnpm-lock.yaml
client/src/: global.css  licenses.txt  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  sql.rs
client/src-tauri/src/migrations/: v1.sql  v2.sql
client/src/App/: index.tsx
client/src/App/App/: Sidebar.tsx  index.tsx  os.ts
client/src/App/App/Chat/: Message.tsx  Messages.tsx  index.tsx
client/src/App/App/Settings/: ServerBlob.tsx  index.tsx
client/src/App/server/: chat.ts  index.ts  key.ts
client/src/App/server/ws/: index.ts
client/src/App/store/db/: chats.ts  servers.ts
client/src/components/ui/: button.tsx  context-menu.tsx  dropdown-menu.tsx  sheet.tsx  sonner.tsx
docs/: package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/src/: download.md
server/: Cargo.toml  config.json  config_____.json  r.rs
server/official/: ahqai-server.d  ahqc.d  ahqc.dll.exp  ahqc.dll.lib
server/official/plugins/: README.md
server/official/templates/hello_world/: Cargo.toml
server/src/: main.rs
server/src/server/: apiset.rs  mod.rs
server/src/server/llama/: mod.rs
