[package]
name = "ahqai-server"
version = "0.3.2"
edition = "2024"
license = "GPL-3.0"
authors = ["A. Chakraborty", "AHQ AI"]

[dependencies]
actix-web = "^4"
actix-ws = "^0.3"

argon2 = { version = "^0.5", features = ["password-hash"] }
aes-gcm = "^0.10"
rand = "^0.9"
base64 = "^0.22"
ed25519-dalek = "^2"

rpassword = "^7"
zeroize = { version = "^1", features = ["zeroize_derive", "alloc"] }
constant_time_eq = "^0.4"
secrecy = "^0.10"

cursive = "^0.21"
cursive-tabs = "^0.8"

redis = { version = "^1", features = ["aio", "tokio-comp"] }
tikv-client = "^0.3"
mongodb = "^3"
moka = { version = "^0.12", features = ["future"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

async-stream = "^0.3"
async-trait = "^0.1"
tokio = { version = "^1", features = ["fs", "sync", "rt"] }
crossbeam-channel = "^0.5"
futures = "^0.3"

thiserror = "^2"
chalk_rs = "^1"
fern = "^0.7"
log = "^0.4"
humantime = "^2"

libloading = "^0.9"

ahqrt = { version = "^0.1", path = "../ahqrt" }

mimalloc = { version = "^0.1", optional = true }
tikv-jemallocator = { version = "^0.6", optional = true }

reqwest = { version = "^0.13", features = [
  "json",
  "rustls-no-provider",
], default-features = false }
rustls = { version = "^0.23", features = ["ring"], default-features = false }

[profile.release]
debug = false
debug-assertions = false
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["stdalloc"]
stdalloc = []
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
