[package]
name = "ahqai"
version = "0.1.0"
description = "AHQ AI Client - Seamless connect to multiple servers and keep chatting"
authors = ["A. Chakraborty", "AHQ AI Contributors", "AHQ Softwares' Team"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "ahqai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-ahqai = { version = "0.1.0", path = "../src-plugin" }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
